<resources>
    <string name="app_name">TaskPivot</string>
    <string name="welcome_to_">Welcome to TaskPivot!</string>
    <string name="welcome_to_task">Start your journey towards enhanced productivity with TaskPivot! Our intuitive task management app helps you stay organized and focused.</string>
    <string name="skip_txt">Skip</string>
    <string name="ob_02_topic">Effortless Management</string>
    <string name="ob_02_content">Say goodbye to overwhelming to-do lists and hello to effortless task management! With TaskPivot, you can easily add, prioritize, and track your tasks with just a few taps.</string>
    <string name="greeting_morning">Good Morning</string>
    <string name="search_txt">Search</string>
    <string name="home_title">Recent Tasks</string>
    <string name="recent_task_title">No Recent Tasks</string>
    <string name="no_recent_task_content">Tap Add New button for navigate to add new task page</string>
    <string name="add_new">Add New</string>
    <string name="title_placeholder">Title of Task</string>
    <string name="description_hint">Task Description</string>
    <string name="date_placeholder">Select Date</string>
    <string name="save_task_txt">Save Task</string>
    <string name="sample_title">Task 01</string>
    <string name="sample_description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo con</string>
    <string name="save_card_date">Date : 23/12/2024</string>
    <string name="remove_btn_txt">Remove Item</string>
    <string name="remove_itm_title">Remove item?</string>
    <string name="remove_itm_description">Are you sure want to remove this item?</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="priority_title">Priority Tasks</string>
    <string name="due_date_txt">Due Date</string>
    <string name="description_txt">Description</string>
    <string name="title_txrt">Title</string>
    <string name="save_chnages_txt">Save Changes</string>
</resources>