<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".modules.HomeScreen">


    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="79dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="276dp"
            android:layout_height="326dp"
            app:srcCompat="@drawable/empty_recent_summeries" />

        <TextView
            android:id="@+id/no_recent_s"
            android:layout_width="215dp"
            android:layout_height="24dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="2sp"
            android:text="@string/recent_task_title"
            android:textColor="@color/input_hint_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationY="-1.11sp" />

        <TextView
            android:id="@+id/tap_summari"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/no_recent_task_content"
            android:textColor="@color/gray_400"
            android:translationY="-1.53sp" />

        <Button
            android:id="@+id/empty_addnew_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/secondary_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_new"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/home_title"
        android:textColor="@color/input_hint_color"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting_morning"
                android:textAlignment="textStart"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:paddingLeft="0dp"
                android:text="Monday, January 25, 2021"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <ImageView
            android:id="@+id/time_img"
            android:layout_width="104dp"
            android:layout_height="96dp"
            android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/evenining_sun" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/search_bg"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/search" />

            <EditText
                android:id="@+id/search_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/search_txt"
                android:inputType="text" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral99"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/bottom_navigation_icon_color"
        app:itemPaddingBottom="8dp"
        app:itemPaddingTop="8dp"
        app:itemRippleColor="@color/gray_400"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>