<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".modules.OnboardingScreen02">

    <ImageView
        android:layout_width="353dp"
        android:layout_height="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/onboarding_02"
        tools:srcCompat="@drawable/onboarding_02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:lineHeight="29sp"
        android:text="@string/ob_02_topic"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <TextView
        android:layout_width="324dp"
        android:layout_height="90dp"
        android:alpha="0.55"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/ob_02_content"
        android:textColor="@color/black"
        android:translationY="-1.31sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="92dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            app:srcCompat="@drawable/slider_01" />

        <ImageButton
            android:id="@+id/onboardingbtn01"
            android:layout_width="60.01dp"
            android:layout_height="60.01dp"
            android:layout_marginStart="225dp"
            android:background="@drawable/ob_navigate_oval_selected"
            android:backgroundTint="@color/blue_A700"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/arrowleft" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="13dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo_01" />

        <TextView
            android:id="@+id/skipText01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="27dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/skip_txt"
            android:textSize="20sp"
            android:translationY="-1.87sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>