<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".modules.TaskViewScreen">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral99"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/bottom_navigation_icon_color"
        app:itemPaddingBottom="8dp"
        app:itemPaddingTop="8dp"
        app:itemRippleColor="@color/gray_400"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow_icon" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/priority_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="7dp"
                    app:srcCompat="@drawable/unliked_star" />

                <ImageView
                    android:id="@+id/delete_button"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="7dp"
                    app:srcCompat="@drawable/bx_delete" />

                <ImageView
                    android:id="@+id/edit_btn"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="7dp"
                    app:srcCompat="@drawable/bx_edit" />
            </LinearLayout>

            <TextView
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/priority_title"
                android:textColor="@color/input_hint_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:lineSpacingExtra="2sp"
                android:text="@string/due_date_txt"
                android:textColor="@color/input_hint_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationY="-1.11sp" />

            <TextView
                android:id="@+id/task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save_card_date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/input_hint_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:lineSpacingExtra="2sp"
                android:text="@string/description_txt"
                android:textColor="@color/input_hint_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationY="-1.11sp" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sample_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/input_hint_color"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>