<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".modules.PriorityScreen">

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.559">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="276dp"
            android:layout_height="326dp"
            app:srcCompat="@drawable/empty_recent_summeries" />

        <TextView
            android:id="@+id/no_recent_s"
            android:layout_width="215dp"
            android:layout_height="24dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="2sp"
            android:text="@string/recent_task_title"
            android:textColor="@color/input_hint_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationY="-1.11sp" />

        <TextView
            android:id="@+id/tap_summari"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/no_recent_task_content"
            android:textColor="@color/gray_400"
            android:translationY="-1.53sp" />

        <Button
            android:id="@+id/empty_addnew_btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/secondary_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_new"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/priority_title"
        android:textColor="@color/input_hint_color"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral99"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/bottom_navigation_icon_color"
        app:itemPaddingBottom="8dp"
        app:itemPaddingTop="8dp"
        app:itemRippleColor="@color/gray_400"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>