<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".modules.AddNewScreen">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="357dp"
            android:layout_height="374dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/save_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_placeholder"
            android:textColorHint="@color/gray_400"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/secondary_color"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/button_date"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_filed_border"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_txt"
                    android:layout_width="295dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_400"
                    android:textSize="18sp"
                    tools:text="YYYY-MM-DD" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/calender" />

            </LinearLayout>

        </RelativeLayout>

        <EditText
            android:layout_width="350dp"
            android:layout_height="85dp"
            android:background="@drawable/input_filed_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/save_task"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/secondary_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save_task_txt"
            android:textColor="@color/primary_color"
            android:textSize="20sp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral99"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/bottom_navigation_icon_color"
        app:itemPaddingBottom="8dp"
        app:itemPaddingTop="8dp"
        app:itemRippleColor="@color/gray_400"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>